fix layout problem for German language

--- a/app/components/graphs/styles/graphs.css
+++ b/app/components/graphs/styles/graphs.css
@@ -24,7 +24,7 @@
 }
 
 .chart_div {
-  width: 920px;
+  width: 924px;
   height: 520px;
   margin: 30px 0 0 100px;
   background-color: #d1f74a;
