--- a/app/components/rooms/styles/room.css
+++ b/app/components/rooms/styles/room.css
@@ -9,13 +9,13 @@
 }
 
 .form_div {
-  width: 300px;
+  width: 350px;
   height: 40px;
   margin-right: auto;
 }
 
 .room_form {
-  width: 300px;
+  width: 350px;
   display: flex;
   margin: 10px 0 0 30px;
 }
