--- a/app/components/settings/styles/settings.css
+++ b/app/components/settings/styles/settings.css
@@ -93,6 +93,7 @@ input[type='text'] {
   position: absolute;
   top: 400px;
   left: 600px;
+  width: 300px;
 }
 
 .support_icon {
